--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jalaram_Attendance</title>
   <link rel="stylesheet" href="style.css">
-  <script src="util.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -59,6 +58,28 @@
       margin-top: 15px;
       text-align: center;
     }
+    .custom-toast {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      z-index: 1000;
+    }
+    .custom-toast.success {
+      background-color: #38a169;
+      color: #ffffff;
+    }
+    .custom-toast.error {
+      background-color: #e53e3e;
+      color: #ffffff;
+    }
+    .custom-toast.show {
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
@@ -76,87 +97,93 @@
     </div>
   </div>
 
-  <script>
-    document.getElementById('login-form').addEventListener('submit', function(event) {
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+    import { validateCredentials } from "./Admin.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBpWA8BuNZ8-Yh6eBtyCMsu9GkQO7v0kn4",
+      authDomain: "jalaram-7bbac.firebaseapp.com",
+      projectId: "jalaram-7bbac",
+      storageBucket: "jalaram-7bbac.firebasestorage.app",
+      messagingSenderId: "865915981684",
+      appId: "1:865915981684:web:2d7156ee1ee725773f6621"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    function showToast(message, type = "success") {
+      const toast = document.createElement("div");
+      toast.className = `custom-toast ${type}`;
+      toast.textContent = message;
+      document.body.appendChild(toast);
+      setTimeout(() => {
+        toast.classList.add("show");
+        setTimeout(() => {
+          toast.classList.remove("show");
+          setTimeout(() => document.body.removeChild(toast), 300);
+        }, 3000);
+      }, 100);
+    }
+
+    async function syncLocalToFirebase() {
+      try {
+        const allKeys = Object.keys(localStorage);
+        for (const key of allKeys) {
+          try {
+            const value = localStorage.getItem(key);
+            const parsed = JSON.parse(value);
+            await set(ref(db, `sync/${key}`), parsed);
+          } catch {
+            await set(ref(db, `sync/${key}`), localStorage.getItem(key));
+          }
+        }
+        showToast("✔️ Local data synced to cloud!");
+      } catch (error) {
+        console.error("Sync to Firebase failed:", error);
+        showToast("⚠️ Failed to sync to cloud", "error");
+      }
+    }
+
+    async function syncFirebaseToLocal() {
+      try {
+        const snap = await get(ref(db, 'sync'));
+        if (snap.exists()) {
+          const data = snap.val();
+          Object.keys(data).forEach(key => {
+            localStorage.setItem(key, JSON.stringify(data[key]));
+          });
+          showToast("✔️ Cloud data loaded to local!");
+        } else {
+          showToast("⚠️ No cloud data found", "error");
+        }
+      } catch (error) {
+        console.error("Load from Firebase failed:", error);
+        showToast("⚠️ Failed to load from cloud", "error");
+      }
+    }
+
+    window.syncLocalToFirebase = syncLocalToFirebase;
+    window.syncFirebaseToLocal = syncFirebaseToLocal;
+
+    document.getElementById('login-form').addEventListener('submit', async function(event) {
       event.preventDefault();
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
-
-      if (username === 'Shyaam' && password === 'Jalaram') {
-        window.location.href = 'main.html';
-      } 
-      if (username === 'Dinesh' && password === 'Jalaram@205') {
-        window.location.href = 'main1.html';
+      const result = validateCredentials(username, password);
+      if (result.valid) {
+        localStorage.setItem('isLoggedIn', 'true');
+        await syncFirebaseToLocal(); // Load cloud data before redirect
+        window.location.href = result.redirect;
       } else {
         document.getElementById('error-message').textContent = 'Invalid username or password';
       }
     });
+
+    // Load cloud data on page load
+    syncFirebaseToLocal();
   </script>
-  <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import {
-    getDatabase, ref, set, get
-  } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyBpWA8BuNZ8-Yh6eBtyCMsu9GkQO7v0kn4",
-    authDomain: "jalaram-7bbac.firebaseapp.com",
-    projectId: "jalaram-7bbac",
-    storageBucket: "jalaram-7bbac.firebasestorage.app",
-    messagingSenderId: "865915981684",
-    appId: "1:865915981684:web:2d7156ee1ee725773f6621"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
-
-  function showToast(message, type = "success") {
-    const toast = document.createElement("div");
-    toast.className = `custom-toast ${type}`;
-    toast.textContent = message;
-    document.body.appendChild(toast);
-
-    setTimeout(() => {
-      toast.classList.add("show");
-      setTimeout(() => {
-        toast.classList.remove("show");
-        setTimeout(() => document.body.removeChild(toast), 300);
-      }, 3000);
-    }, 100);
-  }
-
-  async function syncLocalToFirebase() {
-    const allKeys = Object.keys(localStorage);
-    for (const key of allKeys) {
-      try {
-        const value = localStorage.getItem(key);
-        const parsed = JSON.parse(value);
-        await set(ref(db, `sync/${key}`), parsed);
-      } catch {
-        await set(ref(db, `sync/${key}`), localStorage.getItem(key));
-      }
-    }
-    showToast("✔️ Local data synced to cloud!");
-  }
-
-  async function syncFirebaseToLocal() {
-    const snap = await get(ref(db, 'sync'));
-    if (snap.exists()) {
-      const data = snap.val();
-      Object.keys(data).forEach(key => {
-        localStorage.setItem(key, JSON.stringify(data[key]));
-      });
-      showToast("✔️ Cloud data loaded to local!");
-      // Optional:
-      // location.reload();
-    } else {
-      showToast("⚠️ No cloud data found", "error");
-    }
-  }
-
-  window.syncLocalToFirebase = syncLocalToFirebase;
-  window.syncFirebaseToLocal = syncFirebaseToLocal;
-</script>
-
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'951a869cdf10a6ef',t:'MTc1MDI0Njk3My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
