--- a/main.html
+++ b/main.html
@@ -28,19 +28,19 @@
             <a class="nav-link active" href="main.html">Attendance</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Employees</a>
+            <a class="nav-link" href="index.html">Employees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Monthly Report</a>
+            <a class="nav-link" href="index.html">Monthly Report</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Loan</a>
+            <a class="nav-link" href="index.html">Loan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Advance</a>
+            <a class="nav-link" href="index.html">Advance</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Settings</a>
+            <a class="nav-link" href="index.html">Settings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-danger" href="index.html">Logout</a>
