--- a/Loan.html
+++ b/Loan.html
@@ -48,9 +48,9 @@
     </div>
   </nav>
 
-  <div style="align-items: center; width: 50%;" class="container mt-4">
+  <div style="align-items: center; width: 90%;" class="container mt-4">
     <h1 class="text-center mb-4">Employee Loan Management</h1>
-    <button style="margin-left: 150px; width: 50%; align-self: center;" onclick="syncLocalToFirebase()" class="btn btn-success">Save</button>
+    <button style="margin-left: 25%; width: 45%; align-self: center;" onclick="syncLocalToFirebase()" class="btn btn-success">Save</button>
     <br><br>
     <div class="row">
       <div class="col-md-12">
