--- a/Loan.html
+++ b/Loan.html
@@ -49,7 +49,7 @@
   </nav>
 
   <div style="align-items: center; width: 90%;" class="container mt-4">
-    <h1 class="text-center mb-4">Employee Loan Management</h1>
+    <h1 class="text-center mb-4">Employee Loan</h1>
     <button style="margin-left: 25%; width: 45%; align-self: center;" onclick="syncLocalToFirebase()" class="btn btn-success">Save</button>
     <br><br>
     <div class="row">
