--- a/Advance.html
+++ b/Advance.html
@@ -44,7 +44,7 @@
   </nav>
 
   <div class="container">
-    <h1 class="text-center mb-4">Employee Advance Management</h1>
+    <h1 class="text-center mb-4">Employee Advances</h1>
     <button class="btn btn-success btn-custom w-50 mb-3" style="margin-left: 25%;" onclick="saveToCloud()">Save to Cloud</button>
     <div class="card">
       <h3>Advance</h3>
