--- a/report.html
+++ b/report.html
@@ -229,7 +229,7 @@
         const currentMonthStartDate = new Date(year, month, 1);
         const currentMonthEndDate = new Date(year, month + 1, 0);
 
-        // Load checkbox states for the current month
+        // Load checkbox states for the current month from local storage
         try {
             const savedStates = localStorage.getItem('employeeCheckboxStates_' + monthKey);
             employeeCheckboxStates = savedStates ? JSON.parse(savedStates) : {};
@@ -288,12 +288,29 @@
                     if (l.remaining) totalLoanLeft += l.remaining;
                 });
 
+                // Calculate total carry-forward from all previous months up to the current month
+                let totalCarriedForwardHoursForEmployee = 0;
+                if (carryForwardHours[emp.name]) {
+                    const currentMonthYear = new Date(monthKey); // Convert current monthKey to Date object for comparison
+
+                    for (const cfMonthKey in carryForwardHours[emp.name]) {
+                        const cfMonthYear = new Date(cfMonthKey); // Convert carry-forward monthKey to Date object
+
+                        // If the carry-forward month is *before* the current display month
+                        // and it's not the current display month itself
+                        if (cfMonthYear < currentMonthYear) {
+                            totalCarriedForwardHoursForEmployee += (carryForwardHours[emp.name][cfMonthKey] || 0);
+                        }
+                    }
+                }
+
+                // Update totalNetHours calculation to include the aggregated carry-forward
                 const netHours = hoursHistory
                     .filter(record => record.employee === emp.name && record.date.startsWith(`${monthKey}`))
                     .reduce((sum, record) => sum + (record.type === 'late' ? -record.hours : record.hours), 0);
+                
+                const totalNetHours = netHours + totalCarriedForwardHoursForEmployee;
 
-                const carriedHours = (carryForwardHours[emp.name]?.[monthKey] || 0);
-                const totalNetHours = netHours + carriedHours;
 
                 let fullDays = 0, remainingHours = 0;
                 if (totalNetHours >= 0) {
@@ -317,7 +334,6 @@
                 const hoursAdjustment = remainingHours * hourlyRate;
 
                 const initialSalary = totalSalary - absenceDeduction - totalAdvanceToDeduct + daysAdjustmentAmount;
-
                 // Determine checkbox state from loaded employeeCheckboxStates
                 const isCheckboxTicked = employeeCheckboxStates[emp.name] === true; // Load state
                 const netSalary = isCheckboxTicked ? Math.round(initialSalary + hoursAdjustment) : Math.round(initialSalary);
@@ -647,7 +663,6 @@
 
     document.getElementById('reportMonth').addEventListener('change', function () {
         const newMonthKey = this.value;
-        // When month changes, employeeCheckboxStates will be loaded for the new month in displaySalaries
         displaySalaries(newMonthKey);
     });
 
@@ -751,8 +766,51 @@
     window.updateNetSalaryDisplayAndSaveState = updateNetSalaryDisplayAndSaveState;
 
     // Polyfills for querySelector on contains text
-    // ... (rest of the polyfills remain unchanged)
+    if (!Element.prototype.matches) {
+        Element.prototype.matches = Element.prototype.msMatchesSelector || Element.prototype.webkitMatchesSelector;
+    }
+    if (!Element.prototype.closest) {
+        Element.prototype.closest = function (selector) {
+            var el = this;
+            while (el && el.nodeType === 1) {
+                if (el.matches(selector)) {
+                    return el;
+                }
+                el = el.parentNode;
+            }
+            return null;
+        };
+    }
+    if (!String.prototype.contains) {
+        String.prototype.contains = function (s) {
+            return this.indexOf(s) !== -1;
+        };
+    }
+    (function (selector) {
+        if (!selector) return;
+        var oldQuerySelectorAll = Element.prototype.querySelectorAll;
+        Element.prototype.querySelectorAll = function (selector) {
+            var result = oldQuerySelectorAll.apply(this, arguments);
+            if (selector.indexOf(':contains') === -1) {
+                return result;
+            }
+            var containsText = selector.match(/:contains\(['"]([^'"]*)['"]\)/);
+            if (containsText && containsText[1]) {
+                var text = containsText[1];
+                var newSelector = selector.replace(/:contains\(['"]([^'"]*)['"]\)/g, '');
+                var filtered = [];
+                oldQuerySelectorAll.apply(this, [newSelector]).forEach(function (el) {
+                    if (el.textContent.includes(text)) {
+                        filtered.push(el);
+                    }
+                });
+                return filtered;
+            }
+            return result;
+        };
+    })(Element.prototype.querySelectorAll);
 </script>
+
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
         import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
