--- a/Advance.html
+++ b/Advance.html
@@ -46,7 +46,7 @@
   <div class="container">
     <h1 class="text-center mb-4">Employee Advances</h1>
     <button class="btn btn-success btn-custom w-50 mb-3" style="margin-left: 25%;" onclick="saveToCloud()">Save to Cloud</button>
-    <div class="card">
+    <div style="width:120%; " class=" card">
       <h3>Advance</h3>
       <select id="advanceEmployee" class="form-control mb-2" onchange="loadAdvanceList()"></select>
       <input type="number" id="advanceAmount" placeholder="Total Advance Amount (₹)" class="form-control mb-2" />
